# pyfosc

./: .gitignore  AGENTS.md  CITATION  COPYRIGHT  LICENSE  README.md  addheaderinfo.py  batcpfstext.py  ccdotz.py  cpfstext.py  cpxlraw.sh  identlamp2m.py  login.cl  makeflat2m.py  makereflat2m.py  makezero2m.py  myfosc.json  predef.py  pyfosc_init  pyfosc_run.sh  pyproject.toml  reidentlamp2m.py  removecr2m.py  set2mt.sh  setup.py  wavecal2m.py  xltaddheader.sh
config/: instrconfig.json.temp
database/: idlamp_HCT_fear_Gr7_s167_202208  idlamp_LJ_He+Ne_slit1.8_G14  idlamp_LJ_He+Ne_slit1.8_G8  idlamp_LJ_He+Ne_slit2.5_G14  idlamp_LJ_He+Ne_slit2.5_G3  idlamp_LJ_He+Ne_slit2.5_G3_202212  idlamp_XL_fear_G4+S1.8+385LP  idlamp_XL_fear_G4+S1.8_201901_cal202008  idlamp_XL_fear_G4+S1.8_20230118  idlamp_XL_fear_G4+S2.3_202101  idlamp_XL_fear_G4+S2.3_202111  idlamp_XL_fear_G4+S2.3_202201  idlamp_XL_fear_newG4+S1.8_20231014  lamp_HCT_fear_Gr7_s167_202208.fits  lamp_LJ_He+Ne_slit1.8_G14.fits  lamp_LJ_He+Ne_slit1.8_G8.fits  lamp_LJ_He+Ne_slit2.5_G14.fits  lamp_LJ_He+Ne_slit2.5_G3.fits  lamp_LJ_He+Ne_slit2.5_G3_202212.fits  lamp_XL_fear_G4+S1.8+385LP.fits  lamp_XL_fear_G4+S1.8_201901_cal202008.fits  lamp_XL_fear_G4+S1.8_20230118.fits  lamp_XL_fear_G4+S2.3_202101.fits  lamp_XL_fear_G4+S2.3_202111.fits  lamp_XL_fear_G4+S2.3_202201.fits  lamp_XL_fear_newG4+S1.8_20231014.fits
database/bak/: lamp_LJ_He+Ne_slit2.5_G3.fits
doc/LICENSES/: license_iraf
iraf_data/newlinelists/: henear_scidoc2215.txt  scidoc2215.fits
iraf_scripts/: genlistLJT.cl  genlistLJT2021.cl  genlistXLT.cl  genlistXLT2021.cl
iraf_tasks/: lacos_im.cl
pyfosc/: __init__.py  __main__.py  cli.py  extraction.py  fits_headers.py  fosc.py  masters.py  newlog.py  paths.py  pipeline.py  qtwavecal.py  utils.py  wavecal.py
pyfosc/steps/: __init__.py  ccdotz.py  divideflat2m.py  doapall.py  gen_imglists.py  identlamp2m.py  list_backup_data.py  makeflat_ccdp.py  makereflat2m.py  makezero_ccdp.py  prewavecal.py  reidentlamp2m.py  removecr_ccdp.py  telluric_base2m.py  wavecal2m.py
src/: addheaderinfo.py  ccdotz.py  ccdotz_ccdp.py  cpfstext.sh  cpljnew.py  cpmultispec.py  cpxlraw.sh  divideflat2m.py  doapall.py  fluxcal2m.py  gen_imglists.py  identlamp2m.py  list_back_216data.py  list_back_2mdata.py  list_backup_data.py  makeflat_ccdp.py  makereflat2m.py  makezero2m.py  makezero_ccdp.py  mvintmd.sh  plot_reduced_spec.py  plotonedsp.py  reidentlamp2m.py  removecr2m.py  removecr_ccdp.py  telluric_base2m.py  telluric_std_sens.py  trimonedspec.py  wavecal2m.py
src/old_codes/: cpljnew.sh  cpxlraw.sh  makeflat2m.py  (+1 more)
(+3 files in other folders)
